# news

./: .env  .env.example  Dockerfile  Makefile  README.md  alembic.ini  cnfg  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2022_06_06_01_20_create_source_and_news_tables_21fb9ff3bd72.py  2022_06_06_17_20_source_type_80354063b9f5.py  2022_06_08_00_29_add_column_download_at_60bbf4730e93.py  6c637ac557ed_create_model.py
const/: const.py
crud/: news.py
models/: news.py
news/: alembic.ini  celery_workers.py  config.py  database.py  main.py  openapi.py
routers/: news.py
schemas/: news.py
utils/: news_downloader.py  news_parser.py
