[tool.poetry]
name = "news"
version = "0.1.0"
description = ""
authors = ["me"]

[tool.poetry.dependencies]
python = "3.9.2"
aiohttp = "3.8.0"
fastapi = "0.70.0"
requests = "2.26.0"
uvicorn = "0.16.0"
python-dotenv = "0.19.2"
SQLAlchemy = "1.4.31"
alembic = "1.7.5"
asyncpg = "0.25.0"
celery = "5.2.3"
loguru = "0.5.3"
redis = "4.1.2"
xmltodict = "0.12.0"